--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,7 +1,8 @@
-@import url("//hello.myfonts.net/count/3850dc");
+@import url("//hello.myfonts.net/count/385505");
 
-@font-face {font-family: 'Gilroy-SemiBold';src: url('../../assets/fonts/3850DC_0_0.eot');src: url('../../assets/fonts/3850DC_0_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/3850DC_0_0.woff2') format('woff2'),url('../../assets/fonts/3850DC_0_0.woff') format('woff'),url('../../assets/fonts/3850DC_0_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Regular';src: url('../../assets/fonts/3850DC_1_0.eot');src: url('../../assets/fonts/3850DC_1_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/3850DC_1_0.woff2') format('woff2'),url('../../assets/fonts/3850DC_1_0.woff') format('woff'),url('../../assets/fonts/3850DC_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-SemiBold';src: url('../../assets/fonts/385505_0_0.eot');src: url('../../assets/fonts/385505_0_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_0_0.woff2') format('woff2'),url('../../assets/fonts/385505_0_0.woff') format('woff'),url('../../assets/fonts/385505_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Regular';src: url('../../assets/fonts/385505_1_0.eot');src: url('../../assets/fonts/385505_1_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_1_0.woff2') format('woff2'),url('../../assets/fonts/385505_1_0.woff') format('woff'),url('../../assets/fonts/385505_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Medium';src: url('../../assets/fonts/385505_2_0.eot');src: url('../../assets/fonts/385505_2_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_2_0.woff2') format('woff2'),url('../../assets/fonts/385505_2_0.woff') format('woff'),url('../../assets/fonts/385505_2_0.ttf') format('truetype');}
 
 
 /* latin */
