--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'Gilroy-Regular', sans-serif;
+	font-family: 'Gilroy-Medium', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -41,7 +41,7 @@ section {
 }
 
 strong {
-  font-family: Gilroy-SemiBold,CompassSans-Light;
+  font-family: Gilroy-SemiBold;
   font-weight: 500;
 }
 
