--- a/src/less/post.less
+++ b/src/less/post.less
@@ -494,7 +494,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'Gilroy-Regular';
+			font-family: 'Gilroy-Medium';
 		}
 
 		p > a {
@@ -673,8 +673,6 @@
     line-height: 1.5;
 		@media(max-width: 600px) {
 			margin-top: -5px;
-			font-size: 12px !important;
-			padding: 10px 0;
 			height: auto;
 			line-height: 1.5;
 			width: 110% !important;
