--- a/default.hbs
+++ b/default.hbs
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	{{! Page Meta }}
-	<title>{{meta_title}}</title>
+	<title>{{meta_title}} | Data Science & Engineering</title>
 	<meta name="HandheldFriendly" content="True" />
  	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	{{! Styles }}
