--- a/src/less/code.less
+++ b/src/less/code.less
@@ -512,11 +512,11 @@ blockquote .language-python {
     }
 
     .attr {
-      color: #dddea9;
+      color: #7ab5cf;
     }
 
     .string {
-      color: #9ebfa5;
+      color: #d2c69e;
     }
 
     .name {
@@ -528,6 +528,7 @@ blockquote .language-python {
       margin-bottom: 15px;
       width: 110%;
       height: auto;
+      color: white;
       content: "HTML";
       display: block;
       font-style: normal;
