--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -30,6 +30,7 @@
     display: inline-block;
     min-width: 250px;
     background-size: cover;
+    background-color: white;
     background-position-x: center;
     background-position-y: center;
     border-radius: 0;
