--- a/src/less/code.less
+++ b/src/less/code.less
@@ -499,6 +499,7 @@ blockquote .language-python {
   .hljs.html,
   .language-html,
   .language-xml,
+  .language-Endpoint,
   .language-handlebars {
     background: linear-gradient(#45415f,#252736) !important;
     color: #96a7ff;
@@ -542,6 +543,12 @@ blockquote .language-python {
   .language-xml {
     &::before {
       content: "XML" !important;
+    }
+  }
+
+  .language-Endpoint{
+    &::before {
+      content: "Endpoint" !important;
     }
   }
 
