--- a/src/less/code.less
+++ b/src/less/code.less
@@ -562,15 +562,20 @@ blockquote .language-python {
     &::before {
       content: "Endpoint" !important;
       -webkit-font-smoothing: antialiased;
-  display: block;
-  position: relative;
-  width: 110%;
-  height: auto;
-  margin-bottom: 15px;
-  color: #fff;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
+      display: block;
+      position: relative;
+      width: 104%;
+      height: auto;
+      margin-bottom: 15px;
+      margin-left: -6%;
+      padding: 8px 40px;
+      font-family: Gilroy-Regular;
+      font-size: 1.3em;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: 600;
+      text-rendering: auto;
+      text-shadow: -2px 2px 1px rgba(0,9,46,.6)!important;
     }
   }
 
