--- a/post.hbs
+++ b/post.hbs
@@ -74,7 +74,8 @@
 						 {{#author include="count.posts"}}{{> author-card}}
 					{{/author}}
 
-					{{!--{{> comments}}--}}
+					<script src="//www.powr.io/powr.js?external-type=html"></script>
+ 					<div class="powr-comments" id="62b22f44_1546152358"></div>
 
 					{{> prev-next}}
 				</div>
