removed many dependencies and useless functionality

--- a/partials/newheader.hbs
+++ b/partials/newheader.hbs
@@ -4,11 +4,10 @@
     <div class="rightnav">
       <div class="flexbox">
         <div class="search">
-          <div>
+          <!--<div>
             <input id="nav-search" type="text" placeholder=" Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
             <div id="nav-search-results"></div>
-          </div>
-
+          </div>-->
         </div>
       </div>
       <div class="account">
