--- a/partials/widget-author.hbs
+++ b/partials/widget-author.hbs
@@ -1,4 +1,4 @@
-<!-- start about the author -->
+<!-- Start 'about the author' -->
 {{#foreach authors}}
   <div class="about-author clearfix widget">
     <h4 class="title">Author</h4>
