--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -82,7 +82,7 @@
     .info {
       position: relative;
       span {
-        font-family: 'Gilroy-Regular','Gilroy-Regular', 'CompassSans-Light' !important;
+        font-family: 'Gilroy-Regular','Gilroy-Regular', '' !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
