--- a/src/less/author.less
+++ b/src/less/author.less
@@ -84,7 +84,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'Gilroy-SemiBold', 'CompassSans-Light', sans-serif;
+						font-family: 'Gilroy-SemiBold', '', sans-serif;
 					}
 
 					.country,
@@ -272,7 +272,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'Gilroy-SemiBold', 'CompassSans-Light', sans-serif;
+			font-family: 'Gilroy-SemiBold', '', sans-serif;
 		}
 
 		i {
