--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -272,7 +272,7 @@
       position: relative;
       bottom: 0;
       color: #162c52;
-      font-family: Gilroy-SemiBold,CompassSans-Light;
+      font-family: Gilroy-SemiBold,;
       width: auto;
       display: block;
       align-items: left;
