--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -56,7 +56,7 @@
 
     li {
       display: inline-block;
-      font-family: 'Gilroy-SemiBold', 'CompassSans-Light';
+      font-family: 'Gilroy-SemiBold', '';
       color: #444;
       font-size: 1.1em;
       border: 0;
