--- a/src/less/post.less
+++ b/src/less/post.less
@@ -981,7 +981,7 @@
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 10px;
-			font-family: 'Gilroy-SemiBold', 'CompassSans-Light';
+			font-family: 'Gilroy-SemiBold', '';
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
