--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -113,7 +113,7 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
-				font-family: 'ProductSans-Medium','CompassSans-Light',sans-serif;
+				font-family: 'ProductSans-Medium','',sans-serif;
 
 				&:hover {
 					color: @secondary-color;
