--- a/src/less/series.less
+++ b/src/less/series.less
@@ -156,7 +156,7 @@
 
           a {
               font-size: 1em;
-              font-family: 'ProductSans-Regular','CompassSans-Light',sans-serif;
+              font-family: 'ProductSans-Regular','',sans-serif;
           }
           @media(max-width: 600px) {
             width: -webkit-fill-available;
