--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -223,7 +223,7 @@ header{
   width: 226px;
   position: absolute;
   font-size: 1em;
-  font-family: ,,sans-serif!important;
+  font-family: 'Gilroy-Regular',sans-serif!important;
   font-weight: 200;
   transition: 0.3s all;
   outline: none;
