--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -36,7 +36,7 @@
 			width: 90%;
 			color: #234969;
 			font-size: 1em;
-			font-family: '',,sans-serif!important;
+			font-family: 'Gilroy-Regular',sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -68,7 +68,7 @@
 
 	#nav-search {
 		font-size: 1em;
-		font-family: ,,sans-serif!important;
+		font-family: 'Gilroy-Regular',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -147,7 +147,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: ,,sans-serif!important;
+		font-family: 'Gilroy-Regular',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -455,7 +455,7 @@
 			letter-spacing: 0;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'Gilroy-Medium',,sans-serif;
+			font-family: 'Gilroy-Medium',sans-serif;
 			font-weight: 500;
 			display: inline-block;
 		}
@@ -572,7 +572,7 @@
 .post-title {
 	a {
 		color: #208cad;
-		font-family: 'Gilroy-Medium',,sans-serif;
+		font-family: 'Gilroy-Medium',sans-serif;
 		transition: all 0.2s ease;
 		font-weight: 600 !important;
 
