--- a/partials/prev-next.hbs
+++ b/partials/prev-next.hbs
@@ -1,6 +1,6 @@
 <!-- start prev next wrap -->
 <div class="prev-next-wrap">
-	{{#get "posts" limit="3" include="tags,authors" filter="id:-{{id}}+tag:{{primary_tag.slug}}"}}
+	{{#get "posts" limit="3" include="tags,authors" filter="slug:-{{slug}}+tag:{{primary_tag.slug}}"}}
 		{{#foreach posts}}
 				{{> article-preview}}
 			{{/foreach}}
