--- a/src/less/page.less
+++ b/src/less/page.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "mixin.less";
 
-.page-template {
+.page-slug {
   background: #ecf1f9;
   display: inline-block;
 
