--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -110,7 +110,7 @@
 	padding-top: 56% !important;
 }
 
-.page-template-template,
+.page-slug-template,
 .post-template {
 	.mobile-branding {
 		@media(max-width: 800px) {
