--- a/partials/widget-relatedpost.hbs
+++ b/partials/widget-relatedpost.hbs
@@ -2,7 +2,7 @@
 <div class="widget related">
 	<h4 class="title">Related</h4>
 	<div class="recent-post">
-		{{#get "posts" limit="4" include="tags" filter="id:-{{id}}+tag:{{primary_tag.slug}}"}}
+		{{#get "posts" limit="4" include="tags" filter="slug:-{{slug}}+tag:{{primary_tag.slug}}"}}
 			{{#foreach posts}}
 				<div class="recent-single-post">
 					<a href="{{url}}" class="post-title">{{title}}</a><div class="tags">{{tags separator=", "}}</div>
