--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -704,7 +704,7 @@
 		padding-top: 0 !important;
 
 		.news-description {
-			margin-bottom: 15px;
+			margin: 15px 0 20px;
 			font-size: 0.9em;
 			line-height: 1.8;
 		}
