random style fixes

--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -2,8 +2,8 @@
 @import "mixin.less";
 
 .home-template {
-  .form-group::after{
-    top: 24px;
+  .search::after {
+    top: 24px !important;
   }
 }
 
