gunslinging style tweks

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -62,11 +62,11 @@ blockquote .language-python {
     display: inline;
     overflow-y: visible ;
     width: fit-content;
-    background: rgba(197, 205, 245, 0.30196078431372547);
+    background: rgba(144, 162, 252, 0.30196078);
+    color: #209ec4;
     padding: 2px 6px;
     border-radius: 2px;
-    color: #0e9bb5;
-    font-weight: 500;
+    font-weight: 600;
     font-size: .9em;
     font-family: dm;
   }
