--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -65,12 +65,14 @@
 		background-position-y: center;
 		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
 		transition: all 0.2s ease-out;
+		@media(max-width: 1000px) {
+			max-height: 340px !important;
+		}
 		@media(max-width: 800px) {
-			max-height: 300px;
+			max-height: 330px !important;
 		}
 		@media(max-width: 600px) {
-			height: 50vw;
-			max-height: 210px;
+			max-height: 210px !important;
 		}
 
 		.post-card-image {
