--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -484,7 +484,7 @@
 
 		.series-info {
 			@media(max-width: 1000px) {
-				padding: 5px 15px;
+				padding: 5px 0;
 				background: 0;
 			}
 		}
@@ -557,7 +557,7 @@
 		white-space: nowrap;
 		font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
 		@media(max-width: 1040px) {
-			font-size: 1.3em;
+			font-size: 1.3em !important;
 		}
 	}
 
