--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -6,13 +6,13 @@
 .main-footer {
 	background: #0f2b4d !important;
 	background-size: cover;
-	padding: 35px 10%;
+	padding: 35px 8%;
 	color: #fff;
 	margin-top: 30px;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 
 	.widget.tag {
-		width: 32% !important;
+		width: 37% !important;
 
 		a {
 			color:white;
@@ -66,7 +66,7 @@
 		}
 	}
 	@media(max-width: 1000px) {
-		padding: 30px;
+		padding: 30px 80px;
 	}
 	@media(max-width: 600px) {
 		margin-top: 10px;
@@ -78,8 +78,8 @@
 		newsletter
 	====================================================*/
 #newsletter-footer {
-	max-width: 30%;
-	padding: 13px 20px;
+	max-width: 27%;
+	padding: 13px 0;
 	font-size: 16px;
 	color: #fff;
 	border: 0;
@@ -264,7 +264,7 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	min-width: 34%;
+	min-width: 37%;
 	@media(max-width: 800px) {
 		margin-bottom: 10px;
 		max-width: none;
