--- a/src/less/table.less
+++ b/src/less/table.less
@@ -136,16 +136,27 @@ td, th{
       width: -moz-available;
     }
 
-    th { text-align: left; }
     thead {
       z-index: 1;
       position: absolute;
       left: 0;
       width: 120px;
       height: 100%;
+      border: 0;
+      border-right: 1px solid @table-border-color;
+
       th {
-        font-family: Gilroy-SemiBold;
+        display: block;
+        font-family: 'Gilroy-Regular' !important;
         text-align: center;
+        text-align: left;
+        text-transform: uppercase;
+        letter-spacing: .5px;
+        padding: 10px 5px !important;
+
+        &::before {
+          content: "\00a0";
+        }
       }
 
       tr {
@@ -153,10 +164,6 @@ td, th{
         border-spacing: 0;
         padding: 0;
         height: 100%;
-
-        th::before {
-          content: "\00a0";
-        }
       }
     }
     tbody {
@@ -187,15 +194,21 @@ td, th{
         line-break: strict;
         white-space: inherit;
         padding: 0 15px;
+        border-bottom: none;
+        padding: 0;
+
+        &:last-child {
+          max-width: 300px;
+          min-width: 300px;
+        }
       }
     }
-    th {
-      display: block;
-    }
+
     td {
       display: block;
       min-height: 1.25em;
-      padding: 10px !important;
+      margin: 0 10px!important;
+      padding: 10px 0 !important;
       border-spacing: 0;
       border-collapse: collapse;
       overflow-wrap: normal;
@@ -204,16 +217,6 @@ td, th{
       width: -webkit-fill-available;
       width: -moz-available;
       max-width: 200px;
-    }
-    tr {
-      border-bottom: none;
-      padding: 0;
-    }
-
-    /* sort out borders */
-    thead {
-      border: 0;
-      border-right: 1px solid @table-border-color;
     }
   }
 }
