--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -63,7 +63,7 @@
     </ul>
   </div>
 </div>
-<script>
+<!--<script>
   client.callFunction("FullAuthorDetails").then(result => {
 
     for (var i = 0; i < result.length; i++) {
@@ -111,4 +111,4 @@
       }
     }
   });
-</script>
+</script>-->
