--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -2,17 +2,17 @@
 @import "mixin.less";
 
 .link-preview {
-  padding: 10px;
+  padding: 15px 20px;
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto 30px;
   background: #f5f5f5;
-  display: flex;
-  justify-content: space-between;
+  display: block;
   overflow: hidden;
   box-shadow: 1px 1px 1px rgba(80, 79, 136, 0.2), -1px -1px 0 rgba(61, 62, 80, 0.1);
   transition: all 0.2s easout;
   border: 1px solid rgba(181, 181, 181, .5);
+
   @media(max-width: 800px) {
     width: 99%;
     display: block;
@@ -20,6 +20,55 @@
   @media(max-width: 600px) {
     width: 96%;
     padding: 0;
+  }
+
+  .title-desktop {
+    margin: 0 0 20px!important;
+    font-family: ProductSans-Medium,Gilroy-SemiBold,serif;
+    font-size: 1.3em;
+    line-height: 1.3;
+    text-align: left;
+    @media(max-width: 600px) {
+      display: none;
+    }
+  }
+
+  .title-mobile {
+    display: none;
+    margin: 10px 0 20px!important;
+    font-family: ProductSans-Regular,Gilroy-SemiBold,serif;
+    font-size: 1.2em;
+    line-height: 1.2;
+    font-size: 1.2;
+    text-align: left;
+    @media(max-width: 600px) {
+      display: block;
+    }
+  }
+
+  .detail-stack {
+    position: relative;
+  }
+
+  .link-preview-image {
+    max-width: 250px;
+    min-width: 250px;
+    margin-right: 30px;
+    background-color: white;
+
+    @media(max-width: 600px) {
+      min-width: none;
+      max-width: none;
+      width: 100%;
+      margin-right: 0;
+      background-color: #fff;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
   }
 
   &:hover {
@@ -65,54 +114,44 @@
     width: 100%;
     line-height: 1;
     font-weight: 100;
+    position: absolute;
+    bottom: 0;
     @media(max-width: 600px) {
       font-size: 12px;
+      bottom: -25px;
     }
   }
 
   .link-info {
     display: inline-block;
     overflow: hidden;
-    padding: 10px 15px 10px 30px;
     width: -webkit-fill-available;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    position: relative;
 
     &:hover {
-      cursor:pointer;
+      cursor: pointer;
     }
-
     @media(max-width: 800px) {
-      padding: 10px 20px;
+      padding: 10px;
       display: block;
-    }
-
-    h4 {
-      margin: 0;
-      font-size: 1.3em;
-      font-weight: 400;
-      line-height: 1.2;
-      margin-bottom: 15px;
-      text-align: left;
-      font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
-      @media(max-width: 600px) {
-        font-size: 1.3em;
-        margin-bottom: 5px;
-      }
     }
 
     p {
       color: #505050;
-      font-weight: 100;
+      font-weight: 600;
       line-height: 1.55!important;
       margin-bottom: 10px;
       font-size: 15px;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: Gilroy-Regular!important;
+      font-family: 'Gilroy-Regular' !important;
       -webkit-line-clamp: 6;
       overflow: hidden;
       text-align: left;
       display: -webkit-box;
-      -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
       @media(max-width: 600px) {
