link previews are back, baby

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -84,7 +84,7 @@ blockquote .language-python {
   .hljs {
     display: block;
     overflow-x: hidden;
-    background: #262633;
+    background: linear-gradient(#2a3b4a,#1d2729);
     overflow-wrap: break-word;
     margin: 0;
     font-weight: 200;
