--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -38,7 +38,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'Gilroy-Regular',sans-serif !important;
+			font-family: 'Gilroy-Medium',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -139,7 +139,6 @@
 				overflow: hidden;
 				display: -webkit-box;
 				text-overflow: ellipsis;
-
 			}
 		}
 	}
@@ -184,7 +183,6 @@
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
-
 		@media(max-width:600) {
 			padding-right: 0 !important;
 			margin-right: 0;
@@ -312,14 +310,9 @@
 			}
 
 			&.author {
-
 				@media (max-width: 1000px) {
 					margin: auto 80px auto 0;
 				}
-
-
-
-
 				@media (max-width: 800px) {
 					display: none !important;
 				}
