code snippet fixes

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -84,7 +84,7 @@ blockquote .language-python {
   .hljs {
     display: block;
     overflow-x: hidden;
-    background: linear-gradient(#2a3b4a,#1d2729);
+    background: linear-gradient(#2a2a4a,#1e1d29);
     overflow-wrap: break-word;
     margin: 0;
     font-weight: 200;
@@ -115,6 +115,7 @@ blockquote .language-python {
       text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
       content: "Code Snippet";
       opacity: 1;
+      background: none;
       @media(max-width: 600px) {
         padding: 8px 20px;
         font-size: 1.4em;
