--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -12,7 +12,7 @@
 
 {{ghost_foot}}
 
-<script type="text/javascript">
+<script>
 	let ghostSearch = new GhostSearch({
 		input: '#my-custom-input',
 		results: '#my-custom-results',
@@ -35,7 +35,7 @@
 			let tag = result.tags[0];
 			let url = [location.protocol, '//', location.host].join('');
 			return '<li> \n' +
-				'<img src="' + result.feature_image + '"> \n ' +
+				'<img src="' + result.feature_image + '" alt="' + result.title + '"> \n ' +
 				'<div><a href="' + result.url + '">' + result.title + '</a> \n' +
 				'<span class="tag "> <span class="' + tag.slug + '"><i class="fas fa-tags"></i> ' + tag.name + '</span></span></div> \n ' +
 				'</li>';
