--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -2,8 +2,8 @@
 <header class="post-navbar" style="overflow:hidden">
 	<!-- start logo -->
 	<div class="navcontain">
-		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" data-rjs="3"></a>
-		<a class="mobile-branding" href="{{@blog.url}}"><img src="logowhite.png" data-rjs="3"></a>
+		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" data-rjs="3" alt="{{@blog.title}}"></a>
+		<a class="mobile-branding" href="{{@blog.url}}"><img src="logowhite.png" data-rjs="3" alt="{{@blog.title}}"></a>
 		<!-- start navigation -->
 		<nav class="post-navigation">
 			{{navigation}}
