--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -6,7 +6,7 @@
   {{/if}}
 
   {{#if feature_image}}
-        <a href="{{url}}" class="featured-media" href="{{url}}">
+        <a href="{{url}}" class="featured-media">
           <div class="post-card-image" style="background-image: url({{img_url feature_image}})"></div>
         </a>
   {{/if}}
@@ -34,9 +34,9 @@
             <a href="{{url}}" class="author-mobile"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
           {{/unless}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"><span>{{name}}</span></a>
-            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
-          {{/if}}
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><span>{{name}}</span></a>
+            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+          {{/if}}"
         {{/primary_author}}
         <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
       </div>
