--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -26,8 +26,8 @@
             </a>
           {{/unless}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"><span>{{slug}}</span></a>
-            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi" data-rjs="3"/></a>
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} Author image" class="avi" data-rjs="3"><span>{{slug}}</span></a>
+            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} Author image" class="avi" data-rjs="3"/></a>
             <div class="info"><span class="mobile-name">{{slug}}</span><!--<span class="mobile-date">{{date format="MMM DD"}}</span>--></div>
           {{/if}}
         {{/primary_author}}
