--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -1,6 +1,6 @@
 <!--<script src="https://cdn.firebase.com/libs/firebaseui/3.5.0/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.0/firebaseui.css" />
-<script type="text/javascript">
+<script >
   // FirebaseUI config.
   var uiConfig = {
     signInSuccessUrl: 'https://hackersandslackers.com/account-signup',
