--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -165,9 +165,8 @@
 
   p {
     color: #505050;
-    margin: 0 auto;
     font-weight: 100;
-    margin: 40px;
+    margin: -20px 40px 20px;
     @media(max-width: 900px) {
       min-height: 63px;
     }
