--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -2,9 +2,9 @@
 {{#foreach authors include="count.posts"}}
 <div class="about-author author-card-large clearfix">
 	{{#if profile_image}}
-		<a href="{{url}}" class="avatar"><img src="{{profile_image}}" alt="Author image"></a>
+		<a href="{{url}}" class="avatar"><img src="{{profile_image}}" alt="{{name}} Author image"></a>
 		{{else}}
-		<a href="{{url}}" class="avatar"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image"></a>
+		<a href="{{url}}" class="avatar"><img src="{{asset "images/default-user-image.jpg"}}" alt="{{name}} Author image"></a>
 	{{/if}}
 	<div class="details">
 		<div class="author">
