--- a/partials/newheader.hbs
+++ b/partials/newheader.hbs
@@ -1,6 +1,6 @@
 <header>
   <div class="banner">
-    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" data-rjs="3"></a>
+    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3"></a>
     <!--<div class="rightnav">
       <div class="flexbox">
         <div class="search">
