--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -11,7 +11,7 @@
 
   .post-title a {
     font-size: 1em !important;
-    font-family: 'ProductSans-Bold',Gilroy-Regular;
+    font-family: 'ProductSans-Regular',sans-serif;
   }
 }
 
