--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -527,8 +527,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'Gilroy-SemiBold', '', sans-serif;
-		font-weight: 100;
+		font-family: 'Gilroy-SemiBold', sans-serif;
 		display: inline-block;
 
 		&:hover {
@@ -665,12 +664,12 @@
 			margin-bottom: 17px;
 			line-height: 1.35;
 			padding: 0 0 10px;
+			font-family: 'Gilroy-Regular', sans-serif;
 
 			.post-title,
 			.single-author-name {
-				font-family: 'Gilroy-Regular', '', sans-serif;
+				font-family: 'Gilroy-Regular', sans-serif;
 				.transition(all 0.2s ease);
-				font-weight: 100;
 				@media(max-width: 600px) {
 					text-align: left;
 				}
