found quotation mark in postpreview

--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,6 +1,6 @@
 {{! Pagination file for custom pagination}}
 <!-- start pagination -->
-<nav class="pagination" role="navigation">
+<nav class="pagination">
 	{{#if prev}}
 		<a class="newer-posts" href="{{page_url prev}}"><i class="fas fa-arrow-left"></i></i></a>
 	{{/if}}
