--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
 	{{! Scripts }}
 	<!--<script src="{{asset "/webpack/my-webpack.bundle.js"}}"></script>-->
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script type="text/javascript" src="{{asset "/js/includes/retina.min.js"}}"></script>
+	<script src="{{asset "/js/includes/retina.min.js"}}"></script>
 
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
