updated style clashes

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -18,7 +18,7 @@
 				<div class="github-cards">
 					<a href="https://github.com/toddbirchard/ghosttheme-stockholm" class="github-card" data-github="toddbirchard/ghosttheme-stockholm">
 						<h3 class="repo-title">ghosttheme-stockholm</h3>
-						<p class="repo-description">Clean & minimalist theme</p>
+						<p class="repo-description">Clean Ghost theme with advanced features & customization.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
@@ -38,7 +38,7 @@
 
 					<a href="https://github.com/toddbirchard/ghosttheme-tokyo" class="github-card" data-github="toddbirchard/ghosttheme-tokyo">
 						<h3 class="repo-title">ghosttheme-tokyo</h3>
-						<p class="repo-description">Ghost theme used on Toddzilla blog</p>
+						<p class="repo-description">No-nonsense Ghost theme emphasizing content.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
@@ -58,7 +58,7 @@
 
 					<a href="https://github.com/toddbirchard/linkbox" class="github-card" data-github="toddbirchard/linkbox">
 						<h3 class="repo-title">linkbox</h3>
-						<p class="repo-description">Generates a JSON object containing link preview information by passing a URL parameter.</p>
+						<p class="repo-description">Generate a preview for any link by passing a URL parameter.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
@@ -78,7 +78,7 @@
 
 					<a href="https://github.com/toddbirchard/account-creation-endpoint" class="github-card" data-github="toddbirchard/account-creation-endpoint">
 						<h3 class="repo-title">account-creation-endpoint</h3>
-						<p class="repo-description">Serverless function which creates and welcomes new users.</p>
+						<p class="repo-description">User account creation as a service. Handles Auth, mailing lists, analytics, and more.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
@@ -116,9 +116,9 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/link-embedder" class="github-card" data-github="toddbirchard/link-embedder">
+					<a href="https://github.com/toddbirchard/tableau-etl" class="github-card" data-github="toddbirchard/tableau-etl">
 						<h3 class="repo-title">link-embedder</h3>
-						<p class="repo-description">Generates embedded link previews on all pages of an existing site.</p>
+						<p class="repo-description">A Flask application which extends Tableau to be used as an ETL tool.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
