--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -108,7 +108,7 @@
 			@media(max-width: 600px) {
 				font-size: 1.65em;
 				margin: 0 0 10px;
-				font-weight: 700;
+				font-weight: 500;
 				line-height: 1.2em;
 			}
 
@@ -119,6 +119,12 @@
 
 				&:hover {
 					color: @secondary-color;
+				}
+
+
+				@media(max-width: 600px) {
+					font-family: 'ProductSans-Bold', 'Gilroy-Regular';
+					font-weight: 500;
 				}
 			}
 		}
