fixed author covers

--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -1,3 +1,4 @@
+{{#author}}
 <div class="cover author-cover">
 	<div class="avatar-wrap">
 		{{#if profile_image}}
@@ -39,3 +40,4 @@ $(document).ready(function(){
 		});
 });
 </script>
+{{/author}}
