--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,8 +1,8 @@
 @import url("//hello.myfonts.net/count/385505");
 
-@font-face {font-family: 'Gilroy-SemiBold';src: url('../../../assets/fonts/385505_0_0.eot');src: url('../../../assets/fonts/385505_0_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/385505_0_0.woff2') format('woff2'),url('../../../assets/fonts/385505_0_0.woff') format('woff'),url('../../../assets/fonts/385505_0_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Regular';src: url('../../../assets/fonts/385505_1_0.eot');src: url('../../../assets/fonts/385505_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/385505_1_0.woff2') format('woff2'),url('../../../assets/fonts/385505_1_0.woff') format('woff'),url('../../../assets/fonts/385505_1_0.ttf') format('truetype');}
-@font-face {font-family: 'Gilroy-Medium';src: url('../../../assets/fonts/385505_2_0.eot');src: url('../../../assets/fonts/385505_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/385505_2_0.woff2') format('woff2'),url('../../../assets/fonts/385505_2_0.woff') format('woff'),url('../../../assets/fonts/385505_2_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-SemiBold';src: url('../../assets/fonts/385505_0_0.eot');src: url('../../assets/fonts/385505_0_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_0_0.woff2') format('woff2'),url('../../assets/fonts/385505_0_0.woff') format('woff'),url('../../assets/fonts/385505_0_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Regular';src: url('../../assets/fonts/385505_1_0.eot');src: url('../../assets/fonts/385505_1_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_1_0.woff2') format('woff2'),url('../../assets/fonts/385505_1_0.woff') format('woff'),url('../../assets/fonts/385505_1_0.ttf') format('truetype');}
+@font-face {font-family: 'Gilroy-Medium';src: url('../../assets/fonts/385505_2_0.eot');src: url('../../assets/fonts/385505_2_0.eot?#iefix') format('embedded-opentype'),url('../../assets/fonts/385505_2_0.woff2') format('woff2'),url('../../assets/fonts/385505_2_0.woff') format('woff'),url('../../assets/fonts/385505_2_0.ttf') format('truetype');}
 
 
 /* latin */
@@ -10,7 +10,7 @@
   font-family: 'ProductSans-LightItalic';
   font-style: italic;
   font-weight: 300;
-  src: local('Product-Sans Light Italic'), local('ProductSans-LightItalic'), url("../../../assets/fonts/ProductSans-LightItalic.woff2") format('woff2');
+  src: local('Product-Sans Light Italic'), local('ProductSans-LightItalic'), url("../../assets/fonts/ProductSans-LightItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -18,7 +18,7 @@
   font-family: 'ProductSans-Light';
   font-style: normal;
   font-weight: 300;
-  src: local('Product Sans Light'), local('ProductSans-Light'), url("../../../assets/fonts/ProductSans-Light.woff2") format('woff2');
+  src: local('Product Sans Light'), local('ProductSans-Light'), url("../../assets/fonts/ProductSans-Light.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -26,7 +26,7 @@
   font-family: 'ProductSans-Italic';
   font-style: italic;
   font-weight: 400;
-  src: local('Product-Sans Italic'), local('ProductSans-Italic'), url("../../../assets/fonts/ProductSans-Italic.woff2") format('woff2');
+  src: local('Product-Sans Italic'), local('ProductSans-Italic'), url("../../assets/fonts/ProductSans-Italic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -34,7 +34,7 @@
   font-family: 'ProductSans-Regular';
   font-style: normal;
   font-weight: 400;
-  src: local('Product Sans'), local('ProductSans-Regular'), url("../../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
+  src: local('Product Sans'), local('ProductSans-Regular'), url("../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -42,7 +42,7 @@
   font-family: 'ProductSans-MediumItalic';
   font-style: italic;
   font-weight: 500;
-  src: local('Product-Sans Medium Italic'), local('ProductSans-MediumItalic'), url("../../../assets/fonts/ProductSans-MediumItalic.woff2") format('woff2');
+  src: local('Product-Sans Medium Italic'), local('ProductSans-MediumItalic'), url("../../assets/fonts/ProductSans-MediumItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -50,7 +50,7 @@
   font-family: 'ProductSans-BoldItalic';
   font-style: italic;
   font-weight: 700;
-  src: local('Product-Sans Bold Italic'), local('ProductSans-BoldItalic'), url("../../../assets/fonts/ProductSans-BoldItalic.woff2") format('woff2');
+  src: local('Product-Sans Bold Italic'), local('ProductSans-BoldItalic'), url("../../assets/fonts/ProductSans-BoldItalic.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -59,7 +59,7 @@
   font-family: 'ProductSans-Medium';
   font-style: normal;
   font-weight: 500;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
+  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -67,7 +67,7 @@
   font-family: 'ProductSans-Bold';
   font-style: normal;
   font-weight: 700;
-  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
+  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -75,7 +75,7 @@
   font-family: 'ProductSans-Black';
   font-style: normal;
   font-weight: 900;
-  src: local('Product-Sans Black'), local('ProductSans-Black'), url("../../../assets/fonts/ProductSans-Black.woff2") format('woff2');
+  src: local('Product-Sans Black'), local('ProductSans-Black'), url("../../assets/fonts/ProductSans-Black.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
