--- a/assets/css/twitter_custom.css
+++ b/assets/css/twitter_custom.css
@@ -3,7 +3,7 @@
   font-family: 'ProductSans-Light';
   font-style: normal;
   font-weight: 300;
-  src: local('Product Sans Light'), local('ProductSans-Light'), url("../../assets/fonts/ProductSans-Light.woff2") format('woff2');
+  src: local('Product Sans Light'), local('ProductSans-Light'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdvPWbT2lBgGygpg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -12,16 +12,24 @@
   font-family: 'ProductSans-Regular';
   font-style: normal;
   font-weight: 400;
-  src: local('Product Sans'), local('ProductSans-Regular'), url("../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
+  src: local('Product Sans'), local('ProductSans-Regular'), url(https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eOYktMqg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'ProductSans-Medium';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Product Sans Medium'), local('ProductSans-Medium'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShd5PSbT2lBgGygpg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* latin */
 @font-face {
-  font-family: 'ProductSans-BoldItalic';
-  font-style: italic;
+  font-family: 'ProductSans-Bold';
+  font-style: normal;
   font-weight: 700;
-  src: local('Product-Sans Bold Italic'), local('ProductSans-BoldItalic'), url("../../assets/fonts/ProductSans-BoldItalic.woff2") format('woff2');
+  src: local('Product Sans Bold'), local('ProductSans-Bold'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdrPKbT2lBgGygpg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -33,14 +41,7 @@
   src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* latin */
-@font-face {
-  font-family: 'ProductSans-Bold';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+
 
 #fw-tw-feed-items {
   background: none !important;
@@ -72,6 +73,7 @@ a.fw-tw-links-in-tweets {
 
 .fw-tw-feed-item-username{
   font-weight: 600 !important;
+  font-family: 'ProductSans-Medium','CompassSans-Regular'!important;
 }
 
 
