--- a/src/less/post.less
+++ b/src/less/post.less
@@ -971,9 +971,9 @@
 			width: 100%;
 			clear: both;
 			font-size: .95em;
-			font-weight: 600;
-			line-height: 1.5;
-			color: #606677;
+			color: #464a56;
+	    font-size: .95em;
+	    font-weight: 500;
 		}
 
 		.author {
