separated custom pages to separate less files

--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -21,7 +21,6 @@
 @import "postlist.less";
 @import "tags.less";
 @import 'githubcard.less';
-@import 'kanban.less';
 @import 'social.less';
 @import 'swiper.less';
 @import 'transactional.less';
@@ -35,6 +34,9 @@
 @import 'fontawesome.less';
 @import 'repos.less';
 @import 'redis.less';
+@import 'about-page.less';
+@import 'tag-page.less';
+@import 'projects-page.less';
 
 /*====================================================
 	about author and comment and next-prev link
