--- a/src/less/projects-page.less
+++ b/src/less/projects-page.less
@@ -1,5 +1,28 @@
 @import "variables.less";
-@import "mixin.less";
+
+.page-projects {
+  .container {
+    display: block;
+  }
+
+  .repo-description {
+    margin: 10px 0;
+    line-height: 1.3;
+  }
+
+  .main-content {
+    box-shadow: 0 0 5px rgba(65,67,144,.15);
+    background: white;
+    padding: 3px 30px 20px;
+    width: auto;
+  }
+
+  h3 {
+    font-weight: 500;
+    margin-bottom: 0;
+    font-size: 1.4em;
+  }
+}
 
 .page-projects {
   .sidebar {
@@ -219,7 +242,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'Gilroy-Regular',Gilroy-SemiBold;
+        font-family: 'Gilroy-Medium',Gilroy-SemiBold;
         /*  &::after {
           content: "";
           width: 90px;
@@ -259,11 +282,11 @@
 
           h5 {
             font-size: .9em;
-            font-family: 'Gilroy-Regular';
-            color: #3c3d46;
+            font-family: 'ProductSans-Regular';
+            color: #545669;
             line-height: 1.2;
             margin: 5px 0 20px;
-            width: 99%;
+            width: 95%;
           }
 
           p {
@@ -380,7 +403,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'Gilroy-Regular';
+                font-family: 'Gilroy-Medium';
                 margin-right: 5px;
               }
 
