toml code support

--- a/src/less/nord.less
+++ b/src/less/nord.less
@@ -206,7 +206,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "CSS";
+    content: "CSS" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
@@ -228,7 +228,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "Groovy";
+    content: "Groovy" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
@@ -254,7 +254,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "NGINX";
+    content: "NGINX" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
@@ -277,7 +277,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "Vim";
+    content: "Vim" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
@@ -301,7 +301,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "Yaml";
+    content: "Yaml" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
@@ -324,7 +324,7 @@
     margin-left: -40px;
     width: 110%;
     height: auto;
-    content: "TOML";
+    content: "TOML" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
