--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -75,6 +75,15 @@
     }
   }
 
+  .sql {
+    color: #7277F4 !important;
+    background-color: #d2dce6;
+
+    * {
+      color: #7277F4 !important;
+    }
+  }
+
   .apis {
     color: #763EA9 !important;
     background-color: lighten(#763EA9, 45%);
